--- a/SI699.md
+++ b/SI699.md
@@ -9,8 +9,8 @@
   - use true label as split criterion(cheating)
     - train: 0.23, $4M
     - valid: 0.80, $42M
-  - ![result](not_missing.png)
-  - ![result](perfect_classification_not_missing.png)
+  - ![result](/img/not_missing.png)
+  - ![result](/img/perfect_classification_not_missing.png)
 - 数据缺失（456）
   - 低票房（346）
   - 高票房（110)
@@ -20,8 +20,8 @@
   - use true label as split criterion(cheating)
     - train: 0.87, $14M
     - valid: 1.01, $11M
-  - ![result](missing.png)
-  - ![result](perfect_classification_missing.png)
+  - ![result](/img/missing.png)
+  - ![result](/img/perfect_classification_missing.png)
 - 综合
   - with classification model
     - train: 0.55, $9M
@@ -29,8 +29,8 @@
   - use true label as split criterion(cheating)
     - train: 0.55, $9M
     - valid: 0.97, $16M
-  - ![result](overall.png)
-  - ![result](perfect_classification_overall.png)
+  - ![result](/img/overall.png)
+  - ![result](/img/perfect_classification_overall.png)
 
 roc score of complex on train: 0.9982352656082062
 roc score of easy on train: 0.9245635442176677
