--- a/SI699.md
+++ b/SI699.md
@@ -1,8 +1,11 @@
 ## 2019.3.27
-### 方法一：先按数据是否缺失分类，然后二分类，最后回归，共有4个model。
-- 数据齐全（89）
-  - 低票房（33）
-  - 高票房（56）
+### 方法：先按数据是否缺失分类，然后二分类，最后回归，共有4个model。
+### Step1: Split whole data into two parts: 1) Missing some fields 2) all of the fields are complete
+### Step2: Two binary classifier to classify data from 1) and 2) respectively, label is revenue: 1 for high and 0 for low
+### Step3: Now we have four splits of data, we will do a regression with 4 different models
+- 数据齐全 complete data（89）
+  - 低票房 low revenue（33）
+  - 高票房 high revenue（56）
   - with classification model
     - train: 0.23，$4M
     - valid: 0.93，$47M
@@ -11,9 +14,9 @@
     - valid: 0.80, $42M
   - ![result](/img/not_missing.png)
   - ![result](/img/perfect_classification_not_missing.png)
-- 数据缺失（456）
-  - 低票房（346）
-  - 高票房（110)
+- 数据缺失 field missing data（456）
+  - 低票房 low revenue（346）
+  - 高票房 high revenue（110)
   - with classification model
     - train: 0.87, $14M
     - valid: 1.20, $15M
